--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
-
+body{
+    background-color: rgb(249, 242, 242);
+}
 .navbar-brand{
     font-family: 'Rubik Distressed', cursive;
     font-size: 30px;
@@ -34,6 +36,8 @@
     background-image: url("img/banner-bg.webp");
     height: 620px;
     width: 100%;
+    background-position: center;
+    background-size: cover;
     
 }
 .banner-info{
@@ -43,3 +47,80 @@
 .organic{
     color: rgb(227, 10, 10);
 }
+.feature{
+    margin-top: 50px;
+}
+.feature-part{
+    margin-left: 200px;
+    margin-top: 40px;
+    
+}
+.colum1{
+    border: 1px solid black;
+    background-color: white;
+    width: 320px;
+    height: 370px;
+    box-shadow: 10px 10px 20px grey;
+    
+    
+}
+.colum1:hover{
+    transform: scale(1.09);
+    border: 4px solid black;
+    transition: 1s;
+    
+}
+.colum2:hover{
+    transform: scale(1.09);
+    border: 4px solid black;
+    transition: 1s;
+    
+}
+.colum3:hover{
+    transform: scale(1.09);
+    border: 4px solid black;
+    transition: 1s;
+    
+}
+
+
+.colum2{
+    border: 1px solid black;
+    margin-left:20px;
+    background-color: white;
+    width: 320px;
+    height: 370px;
+    box-shadow: 10px 10px 20px grey;
+}
+
+.colum3{
+    border: 1px solid black;
+    margin-left:20px;
+    background-color: white;
+    width: 320px;
+    height: 370px;
+    box-shadow: 10px 10px 20px grey;
+}
+.fimg{
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.product{
+    margin-top: 60px;
+}
+.item{
+    margin: 5px;
+    
+    cursor: pointer;
+    text-align: center;
+    background-color: rgb(211, 166, 168);
+    border-radius: 10px;
+    
+}
+.card{
+    width: 120px;
+}
+
+
+
